--- a/CSS/Challenge_Mod_5.css
+++ b/CSS/Challenge_Mod_5.css
@@ -300,3 +300,11 @@ padding: 20px 30px;
 
 /*-------------------Challenge 5-11----------------*/
 
+body{
+    background-color: white;
+}
+@media screen and (max-width: 600px) {
+    body {
+      background-color: lightgreen;
+    }
+  }
